Fix Navbar covering following content

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,5 @@
 .navbar {
   padding: 12px;
-  margin-bottom: 12px;
   font-size: 18px;
   letter-spacing: 2px;
   background-color: #fbecd0;
